--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     
-    <ul id="dominio"></ul>
-    <script src="./dist/main.bundle.js"></script>
+    <ul id="dominio"></ul> <!-- creo dominio para que se lea desde js-->
     
+    <script src="./dist/main.bundle.js"></script>
+
 </body>
 </html>
